--- a/Ui Button test/Base.lproj/Main.storyboard
+++ b/Ui Button test/Base.lproj/Main.storyboard
@@ -17,6 +17,9 @@
                                 <rect key="frame" x="112" y="259" width="150" height="130"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal">
+                                    <color key="titleShadowColor" red="1" green="0.80392156862745101" blue="0.0078431372549019607" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                         <real key="value" value="1"/>
